--- a/Phong_Mach_Tu/Phong_Mach_Tu/Phong_Mach_Tu.csproj
+++ b/Phong_Mach_Tu/Phong_Mach_Tu/Phong_Mach_Tu.csproj
@@ -45,6 +45,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\BenhNhanBUS.cs" />
+    <Compile Include="BUS\CachDungBUS.cs" />
+    <Compile Include="BUS\DonViBUS.cs" />
+    <Compile Include="BUS\HoaDonBUS.cs" />
+    <Compile Include="BUS\LoaiBenhBUS.cs" />
+    <Compile Include="BUS\PhieuKhamBenhBUS.cs" />
+    <Compile Include="BUS\ThuocBUS.cs" />
+    <Compile Include="BUS\TienKhamBUS.cs" />
+    <Compile Include="DAO\BenhNhanDAO.cs" />
+    <Compile Include="DAO\CachDungDAO.cs" />
+    <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DAO\DonViDAO.cs" />
+    <Compile Include="DAO\HoaDonDAO.cs" />
+    <Compile Include="DAO\LoaiBenhDAO.cs" />
+    <Compile Include="DAO\PhieuKhamBenhDAO.cs" />
+    <Compile Include="DAO\ThuocDAO.cs" />
+    <Compile Include="DAO\TienKhamDAO.cs" />
+    <Compile Include="DTO\BenhNhanDTO.cs" />
+    <Compile Include="DTO\CachDungDTO.cs" />
+    <Compile Include="DTO\DbAck.cs" />
+    <Compile Include="DTO\DonViDTO.cs" />
+    <Compile Include="DTO\HoaDonDTO.cs" />
+    <Compile Include="DTO\LoaiBenhDTO.cs" />
+    <Compile Include="DTO\PhieuKhamBanhDTO.cs" />
+    <Compile Include="DTO\ThuocDTO.cs" />
+    <Compile Include="DTO\TienKhamDTO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,11 +194,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="BUS\" />
-    <Folder Include="DAO\" />
-    <Folder Include="DTO\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
