--- a/Phong_Mach_Tu/Phong_Mach_Tu/Phong_Mach_Tu.csproj
+++ b/Phong_Mach_Tu/Phong_Mach_Tu/Phong_Mach_Tu.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="BUS\BenhNhanBUS.cs" />
     <Compile Include="BUS\CachDungBUS.cs" />
+    <Compile Include="BUS\CTPhieuBUS.cs" />
     <Compile Include="BUS\DonViBUS.cs" />
     <Compile Include="BUS\HoaDonBUS.cs" />
     <Compile Include="BUS\LoaiBenhBUS.cs" />
@@ -55,6 +56,7 @@
     <Compile Include="BUS\TienKhamBUS.cs" />
     <Compile Include="DAO\BenhNhanDAO.cs" />
     <Compile Include="DAO\CachDungDAO.cs" />
+    <Compile Include="DAO\CTPhieuDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\DonViDAO.cs" />
     <Compile Include="DAO\HoaDonDAO.cs" />
@@ -64,11 +66,12 @@
     <Compile Include="DAO\TienKhamDAO.cs" />
     <Compile Include="DTO\BenhNhanDTO.cs" />
     <Compile Include="DTO\CachDungDTO.cs" />
+    <Compile Include="DTO\CTPhieuDTO.cs" />
     <Compile Include="DTO\DbAck.cs" />
     <Compile Include="DTO\DonViDTO.cs" />
     <Compile Include="DTO\HoaDonDTO.cs" />
     <Compile Include="DTO\LoaiBenhDTO.cs" />
-    <Compile Include="DTO\PhieuKhamBanhDTO.cs" />
+    <Compile Include="DTO\PhieuKhamBenhDTO.cs" />
     <Compile Include="DTO\ThuocDTO.cs" />
     <Compile Include="DTO\TienKhamDTO.cs" />
     <Compile Include="Form1.cs">
